--- a/docs/tex/4-projekt-eksperymentow.tex
+++ b/docs/tex/4-projekt-eksperymentow.tex
@@ -25,7 +25,7 @@ Badanie obejmuje również analizę ograniczeń i zagrożeń związanych z autom
     Proces generacji konfiguracji przez agenta LLM charakteryzuje się zmiennością wyników mimo deterministycznych parametrów (\texttt{temperature = 0}), szczególnie w zakresie strategii eksploracji repozytorium i kolejności generowanych zasobów, co wpływa na powtarzalność rozwiązania.
 
     \item \textbf{H5: Podatność na manipulację kontekstem} \\
-    Agenty LLM są podatne na manipulację przez złośliwe lub mylące treści zawarte w repozytorium (prompt injection, social engineering w plikach README/dokumentacji). Obecność instrukcji konfliktowych lub próby przekierowania agenta mogą prowadzić do wygenerowania niepoprawnych, niebezpiecznych lub całkowicie odmiennych od zamierzonych konfiguracji.
+    Agenty LLM są podatne na manipulację przez złośliwe lub mylące treści zawarte w repozytorium (prompt injection, social engineering w plikach README/dokumentacji). Obecność instrukcji konfliktowych lub próby przekierowania agenta (np. wymuszenie uruchomienia kontenera z \texttt{privileged: true}, podszywanie się pod alternatywne repozytorium) mogą prowadzić do wygenerowania niepoprawnych, niebezpiecznych lub całkowicie odmiennych od zamierzonych konfiguracji.
 
     \item \textbf{H6: Wykrywanie błędów przez LLM-as-a-Judge} (TODO: czy zostawić?)\\
     Modele LLM działające jako ``sędziowie'' potrafią identyfikować istotne błędy i braki w autonomicznie wygenerowanych konfiguracjach Docker i Kubernetes, dostarczając uzupełniającej metody walidacji względem narzędzi statycznej analizy. Hipoteza zakłada korelację ocen LLM Judge z liczbą wykrytych problemów oraz faktycznym sukcesem procesu budowania i uruchamiania, co otwiera drogę do iteracyjnych mechanizmów samokorekty w rozwiązaniach typu PaaS.
