--- a/docs/main.tex
+++ b/docs/main.tex
@@ -67,13 +67,13 @@
 %-------------------------------------
 \cleardoublepage % Zaczynamy od nieparzystej strony
 \abstract
-Celem niniejszej pracy magisterskiej jest zbadanie możliwości wykorzystania dużych modeli językowych (LLM) do automatycznego generowania konfiguracji infrastruktury jako kodu (IaC), ze szczególnym uwzględnieniem plików Dockerfile oraz manifestów Kubernetes. Przeprowadzono przegląd literatury opisującej aktualne badania w tym obszarze, wskazując zarówno potencjał automatyzacji, jak i liczne wyzwania związane z poprawnością, bezpieczeństwem i niezawodnością wygenerowanego kodu.
+Celem niniejszej pracy magisterskiej jest zbadanie możliwości autonomicznego generowania konfiguracji infrastruktury jako kodu (IaC) przez agenty oparte na dużych modelach językowych (LLM), ze szczególnym uwzględnieniem plików Dockerfile oraz manifestów Kubernetes. Praca koncentruje się na weryfikacji, czy agenty LLM są w stanie — bez ingerencji człowieka — wygenerować funkcjonalne, bezpieczne i zgodne z dobrymi praktykami konfiguracje wdrożeniowe. Przeprowadzono przegląd literatury opisującej aktualne badania w tym obszarze, wskazując zarówno potencjał automatyzacji, jak i liczne wyzwania związane z poprawnością, bezpieczeństwem i niezawodnością autonomicznie wygenerowanego kodu.
 
-W części badawczej pracy przeprowadzono analizę możliwości wybranych modeli językowych, zaprojektowano zestaw eksperymentów porównawczych oraz opracowano własne kryteria oceny poprawności i bezpieczeństwa generowanych manifestów Docker i Kubernetes. Następnie, na podstawie wyników eksperymentów, zaprojektowano i zaimplementowano prototyp systemu typu Platform as a Service (PaaS), który automatycznie generuje konfiguracje na podstawie repozytorium kodu, buduje obrazy Docker oraz wdraża aplikacje w klastrze Kubernetes.
+W części badawczej sformułowano pięć hipotez badawczych (H1–H5) dotyczących: autonomicznej generacji funkcjonalnych konfiguracji, ograniczeń złożonościowych, jakości i zgodności z dobrymi praktykami, niezawodności procesu oraz podatności na manipulację kontekstem. Zaprojektowano dedykowany system testowy obejmujący agenta LLM z dostępem do jedenastu narzędzi analizy repozytorium, potok walidacyjny oraz infrastrukturę wykonawczą (MicroK8s). Przeprowadzono serię eksperymentów na rzeczywistych projektach z GitHub oraz pięciu kontrolowanych repozytoriach testowych o rosnącej złożoności. Dla hipotezy H3 zastosowano wielowarstwową walidację jakości: automatyczną analizę statyczną (Hadolint, Kube-linter), ocenę przez model językowy (LLM-as-a-Judge) oraz ocenę ekspercką. Wyniki eksperymentów poddano szczegółowej analizie statystycznej i jakościowej, prowadząc do weryfikacji wszystkich pięciu hipotez oraz sformułowania wniosków dotyczących praktycznej przydatności agentów LLM w kontekście automatyzacji DevOps.
 
-Przeprowadzono serię testów oceniających skuteczność modeli pod względem poprawności składniowej, zgodności z wymaganiami oraz odporności na błędy i podatności bezpieczeństwa. Dodatkowo w systemie zaimplementowano komponenty wspierające walidację i automatyczne wykrywanie potencjalnie niebezpiecznych konfiguracji.
+[TODO: Finalnie zaprezentowano praktyczne zastosowanie wypracowanych rozwiązań w postaci prototypowego systemu typu Platform as a Service (PaaS) demonstrującego automatyczne wdrażanie aplikacji kontenerowych.]
 
-\keywords Infrastructure as Code, LLM, Kubernetes, Docker, automatyzacja, bezpieczeństwo, DevOps, PaaS
+\keywords Infrastructure as Code, LLM, agenty LLM, Kubernetes, Docker, automatyzacja, bezpieczeństwo, DevOps, weryfikacja hipotez, wielowarstwowa walidacja
 
 %----------------------------------------
 % Streszczenie po angielsku dla \langpol
@@ -81,13 +81,13 @@ Przeprowadzono serię testów oceniających skuteczność modeli pod względem p
 %----------------------------------------
 \clearpage
 \secondabstract
-The goal of this master’s thesis is to investigate the potential of large language models (LLMs) for automatically generating Infrastructure as Code (IaC), with a particular focus on Dockerfiles and Kubernetes manifests. The study includes a literature review of recent research in the field, identifying both the automation potential and key challenges related to the correctness, security, and reliability of LLM-generated infrastructure code.
+The goal of this master's thesis is to investigate the capabilities of autonomous Infrastructure as Code (IaC) configuration generation by agents based on large language models (LLMs), with a particular focus on Dockerfiles and Kubernetes manifests. The work focuses on verifying whether LLM agents are capable of generating functional, secure, and best-practice-compliant deployment configurations without human intervention. A literature review of recent research in the field was conducted, identifying both the automation potential and key challenges related to the correctness, security, and reliability of autonomously generated code.
 
-In the research phase, a comparative analysis of selected language models was conducted, along with the design of experimental test cases and the development of custom evaluation criteria for the correctness and security of generated Docker and Kubernetes manifests. Based on the experimental results, a prototype Platform as a Service (PaaS) system was designed and implemented, capable of automatically generating configurations from code repositories, building Docker images, and deploying applications to a Kubernetes cluster.
+In the research phase, five research hypotheses (H1–H5) were formulated concerning: autonomous generation of functional configurations, complexity limitations, quality and compliance with best practices, process reliability and repeatability, and susceptibility to context manipulation. A dedicated testing system was designed, comprising an LLM agent with access to eleven repository analysis tools, a validation pipeline, and execution infrastructure (MicroK8s). A series of experiments was conducted on real-world GitHub projects and five controlled test repositories with increasing complexity. For hypothesis H3, a multi-layered quality validation approach was employed: automated static analysis (Hadolint, Kube-linter), LLM-as-a-Judge evaluation, and expert human evaluation. Experimental results were subjected to detailed statistical and qualitative analysis, leading to verification of all five hypotheses and formulation of conclusions regarding the practical utility of LLM agents in DevOps automation context.
 
-A series of tests was conducted to evaluate the models’ accuracy, compliance with system requirements, and resistance to misconfigurations and security vulnerabilities. In addition, components supporting validation and automatic detection of unsafe configurations were implemented.
+[TODO: Finally, a practical application of the developed solutions was presented in the form of a prototype Platform as a Service (PaaS) system demonstrating automatic containerized application deployment.]
 
-\secondkeywords Infrastructure as Code, Large Language Models, Kubernetes, Docker, Automation, Security, DevOps, PaaS
+\secondkeywords Infrastructure as Code, Large Language Models, LLM agents, Kubernetes, Docker, Automation, Security, DevOps, Hypothesis verification, Multi-layered validation
 
 \pagestyle{plain}
 
@@ -108,10 +108,8 @@ A series of tests was conducted to evaluate the models’ accuracy, compliance w
 \input{tex/3-przeglad-narzedzi}
 \input{tex/4-projekt-eksperymentow}
 \input{tex/5-analiza-porownawcza}
-% \input{tex/6-bezpieczenstwo}
-% \input{tex/7-projekt-systemu}
-% \input{tex/8-implementacja}
-% \input{tex/9-wnioski-i-dalsze-kierunki}
+% TODO: \input{tex/6-system-paas}
+% TODO: \input{tex/7-wnioski}
 
 %---------------
 % Bibliografia
@@ -178,9 +176,14 @@ You have access to tools that can help you with these tasks. When given a reposi
 3. Retrieve the content of files you determine are necessary to understand the application
 4. Write or modify files in the repository (e.g., Dockerfile, Kubernetes manifests)
 5. List directory contents within the repository
+6. Search for text patterns across repository files
+7. Find files by filename pattern
+8. Encode and decode base64 data (useful for Kubernetes Secrets)
+9. Apply patches to files for targeted edits
+10. Use the think tool to organize your thoughts and plan your approach
 
 You should use the clone_repo tool to clone a repository. The repository name can be extracted from the repository URL by taking the last part of the URL, removing the .git extension, and replacing dots with hyphens.
-For example, for the URL \"https://github.com/run-rasztabiga-me/poc1-fastapi.git\", the repository name would be \"poc1-fastapi\".
+For example, for the URL "https://github.com/run-rasztabiga-me/poc1-fastapi.git", the repository name would be "poc1-fastapi".
 
 You can use the prepare_repo_tree tool to get an overview of the repository structure if needed, but you should focus on identifying and examining files that are most relevant to understanding the application and creating the required outputs.
 
@@ -190,22 +193,43 @@ You can use the write_file tool to create new files or modify existing ones in t
 
 You can use the ls tool to list the contents of a directory within the cloned repository. This tool requires the directory path relative to the repository root. You can use an empty string or "." to list the contents of the repository root directory. The tool will display directories and files separately, with directories having a trailing slash and files showing their sizes in bytes. This is useful for exploring the repository structure in a more focused way than the prepare_repo_tree tool.
 
+You can use the search_files tool to search for text patterns across files in the repository. This tool accepts a regex pattern and optionally a file pattern filter (e.g., "*.py", "*.yaml"). It returns matching lines with their file paths and line numbers, including one line of context before (marked with '-') and after (marked with '+') each match to help understand the surrounding code. The search is case-insensitive by default but supports case-sensitive mode. Examples: search for "DATABASE_URL" to find database configurations, search for "PORT.*=" to find port definitions, or search for "def.*health" to find health check endpoints.
+
+You can use the find_files tool to search for files by filename pattern (not content). This tool accepts glob patterns like "*.py", "Dockerfile*", "package.json", "requirements.txt" and returns a list of matching file paths. This is faster than searching file contents when you just need to locate files by name. Examples: find_files("*.py") to find all Python files, find_files("Dockerfile*") to find all Dockerfiles, find_files("package.json") to find Node.js package files.
+
+You can use the base64_encode tool to encode plain text content to base64 format. This is essential when creating Kubernetes Secrets, as all secret values must be base64-encoded. For example, to create a database password secret, encode the plain password using this tool and use the encoded value in your Secret manifest.
+
+You can use the base64_decode tool to decode base64-encoded strings back to plain text. This is useful when you need to read or verify existing Kubernetes Secrets or other base64-encoded configuration values in the repository.
+
+You can use the patch_file tool to apply targeted edits to files using unified diff format. This is useful when you need to make small, precise changes to a file without rewriting the entire content. The tool accepts a file path and a unified diff patch (with @@ line numbers). This is more efficient than reading the entire file, modifying it, and writing it back for small changes. However, for creating new files or making large changes, use the write_file tool instead.
+
+You can use the think tool to organize your internal thoughts and reasoning. This is a reflective space where you can write down your observations about the repository, your understanding of the application architecture, your strategy for creating the required files, potential issues you've identified, and your next steps. Use this tool freely throughout your analysis to maintain clarity and ensure you're on the right track. The think tool doesn't modify anything - it's purely for your reasoning process. Examples of when to use it: after exploring the repository structure, before creating the Dockerfile, when you discover important patterns in the code, or when planning your Kubernetes resource strategy.
 
 Your objective is to create:
 
-1. A Dockerfile that properly containerizes the application. When creating the Dockerfile, carefully analyze the application code to ensure that any health check endpoint you specify actually exists in the application.
+1. A Dockerfile that properly containerizes the application. When creating the Dockerfile:
+   - Carefully analyze the application code to ensure that any health check endpoint you specify actually exists in the application
+   - IMPORTANT: For multi-service repositories, write COPY instructions as if the build context is the service directory itself
+   - For example, if the Dockerfile is at "backend/Dockerfile" and you need to copy "backend/src/" to "/app/src", use "COPY src /app/src" NOT "COPY backend/src /app/src"
+   - This is because the build_context will be set to the service directory (e.g., "backend/") to minimize context size
+   - For single-service repositories, the build context will be "." (repository root), so COPY paths should be relative to the root
+   - Avoid binding application processes to privileged ports (<1024) when the container runs as a non-root user; expose and serve on application-friendly ports like 8000 and map external access through Services/Ingress
 
 2. Kubernetes manifests for the application. These manifests should:
    - Include all required resources (Deployments, Services, Ingresses, and Volumes if necessary)
    - Match exposed ports precisely as specified in the Dockerfile
-   - Set replicas default to 1 unless otherwise stated
-   - For ingress host, use "<repository-name>.rasztabiga.me" (e.g., repository "app1" -> domain "app1.rasztabiga.me")
+   - Keep Service targetPorts aligned with the non-privileged containerPort (e.g., 8000) and, if you need to expose port 80 externally, map it via Service `port`/Ingress rather than changing the container port
+   - Set replicas default to {default_replicas} unless otherwise stated
+   - For ingress host, use "<repository-name>.{domain_suffix}" (e.g., repository "app1" → domain "app1.{domain_suffix}")
    - Follow Kubernetes best practices and ensure security measures
+   - Explicitly guard against containers missing read-only root filesystems or runAsNonRoot settings by adding the appropriate securityContext configuration (set runAsNonRoot: true, specify a non-root UID when possible, and enable readOnlyRootFilesystem unless the workload truly requires writes)
    - If external dependencies (e.g., databases like PostgreSQL, Redis, MySQL) are identified, generate appropriate Kubernetes resources for those dependencies as well
    - Deploy stateful dependencies using StatefulSets with appropriate PersistentVolumeClaims
+   - IMPORTANT: When creating PersistentVolumeClaims, do NOT specify storageClassName if there is a default storage class configured in the cluster (this allows the default to be used automatically)
+   - IMPORTANT: For stateful applications (databases, etc.), use subPath in volumeMounts to avoid permission issues with persistent volume root directories. This prevents "Operation not permitted" errors when containers try to set permissions on mounted volumes. Configure data directories to point to subdirectories within the mount path.
    - Deploy stateless applications using Deployments
    - Use Services to expose applications internally and externally as necessary
-   - Ensure all Kubernetes secrets are in base64 format
+   - Ensure all Kubernetes secrets are in base64 format (use the base64_encode tool to encode secret values)
    - Include appropriate resource limits/requests
    - When configuring health checks (liveness and readiness probes), verify that the specified endpoints actually exist in the application code first
    - DO NOT create or include a namespace in the manifests
@@ -214,11 +238,46 @@ Given a repository URL from the user, you should automatically:
 1. Clone the repository
 2. Analyze the repository structure and find important files to understand the application
 3. Create a Dockerfile for the application
-4. Generate appropriate Kubernetes manifests for the application 
+4. Generate appropriate Kubernetes manifests for the application
 
 The user will only provide the repository URL. You must handle all the remaining steps automatically without requesting additional information from the user.
 
-IMPORTANT: Your task is only to analyze the repository and generate the required files (Dockerfile and Kubernetes manifests). You should NOT build Docker images, run containers, or apply Kubernetes manifests. After you have successfully generated a Dockerfile and Kubernetes manifests, respond with a message that includes the word "DONE" to indicate that you have completed the task.
+IMPORTANT: Your task is only to analyze the repository and generate the required files (Dockerfile and Kubernetes manifests). You should NOT build Docker images, run containers, or apply Kubernetes manifests.
+
+After you have successfully generated all files, you must end your response with a JSON object containing information about the generated files in this exact format:
+
+```json
+{{
+  "docker_images": [
+    {{
+      "dockerfile_path": "backend/Dockerfile",
+      "image_tag": "backend",
+      "build_context": "backend"
+    }},
+    {{
+      "dockerfile_path": "frontend/Dockerfile",
+      "image_tag": "frontend",
+      "build_context": "frontend"
+    }}
+  ],
+  "kubernetes_files": ["k8s/backend-deployment.yaml", "k8s/frontend-deployment.yaml", "k8s/service.yaml"],
+  "test_endpoint": "/"
+}}
+```
+
+Guidelines for the structured output:
+- For single-service applications: use image_tag equal to the repository name or the service type (e.g., "api", "app", "backend")
+- For multi-service applications: use descriptive tags for each service's role (e.g., "frontend", "backend", "api", "worker", "postgres")
+- IMPORTANT: The build_context should be set strategically to minimize build context size:
+  * For single-service applications: use "." (repository root)
+  * For multi-service applications: use the service directory (e.g., "backend/", "frontend/")
+  * This reduces build context size and improves build performance
+  * Remember: Dockerfile COPY instructions must be written relative to the build_context, not the repository root
+- The dockerfile_path should specify where the Dockerfile is located (e.g., "Dockerfile" for root, "backend/Dockerfile" for service-specific)
+- Replace the example file names and paths with the actual files you created
+- The test_endpoint should be a relative path (starting with "/") to an endpoint that you've verified exists in the application code and should return a 2xx HTTP status code. Common examples include "/", "/health", "/api/health", "/api/v1/health", or any other working endpoint you've identified in the codebase. IMPORTANT: You must analyze the application's routes/endpoints to ensure this endpoint actually exists before specifying it.
+
+This JSON must be the last thing in your response.
 
 \end{minted}
 
