--- a/docs/tex/2-przeglad-literatury.tex
+++ b/docs/tex/2-przeglad-literatury.tex
@@ -157,4 +157,4 @@ Podsumowując, literatura wskazuje, że duże modele językowe posiadają już z
 
 Jednocześnie jednak żadne z rozwiązań nie jest pozbawione wad. Wyzwania związane z halucynacjami modeli \cite{low_repairing_2024}, koniecznością walidacji wyników \cite{ueno_migrating_2024, kon_iac-eval_nodate} i zapewnieniem bezpieczeństwa \cite{malul_genkubesec_2024, fu_security_2025} wskazują, że rola człowieka (eksperta DevOps) wciąż pozostaje ważna jako nadzorcy i korektora działania AI. Dlatego bieżące badania kierują się ku metodom łączenia silnych stron LLM z mechanizmami kontrolnymi – np. stosowanie podejścia human-in-the-loop \cite{low_repairing_2024}, rozwijanie benchmarków oceny jakości (aby móc mierzyć postępy i porównywać modele) \cite{ueno_migrating_2024, kon_iac-eval_nodate}, eksplorowanie technik prompt engineering \cite{kratzke_dont_2024, pujar_invited_2023}, a także opracowanie metod ochrony przed atakami prompt injection \cite{liu_prompt_2024}, które zmniejszą skłonność modeli do popełniania typowych błędów lub podatności.
 
-Niniejsza praca magisterska wpisuje się w ten nurt, koncentrując się na zbudowaniu automatycznego narzędzia do generowania konfiguracji Docker i Kubernetes wyłącznie na podstawie repozytorium kodu źródłowego, bez udziału człowieka. W ramach pracy zostanie przeprowadzona analiza i porównanie skuteczności różnych dużych modeli językowych w tym zadaniu. Szczególny nacisk położony będzie na bezpieczeństwo generowanej konfiguracji, poprawność składniową i funkcjonalną manifestów oraz na analizę potencjalnych zagrożeń, takich jak ataki typu prompt injection czy przez złośliwie spreparowane repozytoria. Ostatecznie projekt zostanie rozszerzony o prototyp systemu typu PaaS, umożliwiającego automatyczne wdrażanie aplikacji na podstawie kodu źródłowego, bez konieczności ingerencji człowieka.
+Niniejsza praca magisterska rozwija ten kierunek poprzez empiryczną weryfikację pięciu hipotez (H1–H5) opisujących autonomię agentów LLM, wpływ złożoności aplikacji, jakość generowanych konfiguracji, powtarzalność procesu oraz odporność na manipulacje kontekstem. Testowane są różne modele językowe, jednak nie w celu ich rankingu, lecz jako narzędzia potrzebne do oceny, czy agent z minimalną ingerencją człowieka potrafi przygotować poprawne i bezpieczne pliki Dockerfile oraz manifesty Kubernetes. Szczególną uwagę poświęcono aspektom bezpieczeństwa (np. prompt injection, złośliwe repozytoria), zgodności z dobrymi praktykami oraz funkcjonalnej poprawności wdrożeń. Wyniki badania posłużą także do zaprezentowania prototypowego rozszerzenia w postaci systemu PaaS, który ma ilustrować praktyczne zastosowanie zweryfikowanych mechanizmów, ale nie stanowi głównego celu pracy.
